Added metadata for some streets

--- a/metadata/10508024.yaml
+++ b/metadata/10508024.yaml
@@ -1,2 +1,14 @@
 id: 10508024
-name: Strada Napoca
+name: 
+  ro: Strada Napoca
+  hu:
+  description:
+historical_names:
+  -
+    ro:
+    hu:
+    description:
+  -
+    ro:
+    hu:
+    description:
