--- a/metadata/23893849.yaml
+++ b/metadata/23893849.yaml
@@ -1,2 +1,36 @@
 id: 23893849
 name: Strada Émile Zola
+description:
+  ro: |
+    Această stradă a fost o uliță secundară spre interiorul cetății vechi, 
+    pe care în anul 1608 s-a construit o casă în care funcționau servicii 
+    de schimb valutar și o monetărie, unde se băteau monede de aur. 
+    La sfârșitul secolului al IXI.-lea, casa a fost demolată în vederea lărgirii străzii, 
+    care mai apoi a devenit strada Cornișei.
+  hu: |
+    Nevét az Óvárba vezető sikátorként kapta. 
+    Az 1608-ban épült pénzbeváltó és aranyverő házat a XIX. század végén lebontották, 
+    s a skátort utcává szélesítették. Ekkor Kornis utca lett. 
+historical_names:
+  -
+    year: 1658
+    ro: Óvári szoros (Pasajul cetății) 
+    hu: Óvári szoros
+  - 
+    year: 1869
+    ro: Kornis utca (Strada Cornișei)
+    hu: 
+  -
+    year: 1923
+    ro: Strada General Neculcea
+    hu: 
+  -
+    year: 1941
+    ro: Kornis utca (Strada Cornișei) 
+    hu: Kornis utca
+  - 
+    year: 1945
+    ro: Kornis utca (Strada Cornișei), Strada Émile Zola
+  - 
+    year: 1964
+    ro: Strada Émile Zola
