--- a/metadata/177921036.yaml
+++ b/metadata/177921036.yaml
@@ -1,2 +1,40 @@
 id: 177921036
 name: Strada Paul Chinezu
+description:
+  ro: |
+    La fel cum numele vechi al străzii Bisericii Ortodoxe, Ulița Grecilor, 
+    mai apoi Strada Bisericii Grecești este stâns legată de stabilirea unor comunități de greci în oraș 
+    la începutul secolului al XVIII.-lea, așa și Strada Kandia păstrează numele maghiar al insulei Creta. 
+    Numele apare deja în anul 1744 și poate să se refere peiorativ și la locuitorii întorși din Grecia 
+    unde fuseseră prizonieri care acum locuiau în condiții mizere.
+  hu: |
+    Mint ahogy a későbbi Görögtemplom-utca névadása, régi nevén a Görögök sikátora, 
+    a XVIII. században betelepült görög kereskedők jelentkezésével lehet kapcsolatos, 
+    úgy a Kandia-utca neve is valószínüleg Kréta szigetének magyar nevét őrízte meg. 
+    A már 1744-ben előforduló megnevezés viszont a Kréta szigetére elhurcolt és nyomorúságos 
+    viszonyok közt visszatért foglyokra is utalhat.
+historical_names:
+  - 
+    year: 1734
+    ro: Kandia utca (Strada Kandia)
+    hu: Kandia utca 
+  -
+    year: 1899
+    ro: Kinizsi utca (Strada Kinizsi)
+    hu: Kinizsi utca 
+  -
+    year: 1923
+    ro: Strada Paul Chinez 
+    hu: Strada Paul Chinez 
+  -
+    year: 1941
+    ro: Kinizsi utca (Strada Kinizsi)
+    hu: Kinizsi utca 
+  -
+    year: 1945
+    ro: Kinizsi utca, Strada Chinezu Paul
+    hu: Kinizsi utca, Strada Chinezu Paul
+  - 
+    year: 1964
+    ro: Strada Paul Chinezu
+    hu: Strada Paul Chinezu
