--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "grunt": "~0.4.1",
     "grunt-yaml": "~0.2.1",
     "grunt-contrib-connect": "~0.5.0",
-    "lodash": "~2.2.1"
+    "lodash": "~2.2.1",
+    "grunt-ejs": "~0.1.0",
+    "slug": "~0.3.3"
+  },
+  "dependencies": {
+    "ejs": "~0.8.4"
   }
 }
