--- a/metadata/43707055.yaml
+++ b/metadata/43707055.yaml
@@ -1,3 +1,35 @@
 id: 43707055
 name: Strada Brassai Sámuel
 slug: brassai-samuel
+description: 
+  hu:
+  ro:
+historical_names:
+  -
+    year: 1831
+    ro: Strada Săpunului
+    hu: Szappany utca
+  -
+    year: 1845
+    ro: Strada lungă a săpunului
+    hu: Hosszú-Szappany utca
+  -
+    year: 1914
+    ro: Strada Brassai
+    hu: Brassai utca
+  -
+    year: 1923
+    ro: Strada Baron L. Pop
+    hu:
+  -
+    year: 1941
+    ro: Strada Brassai
+    hu: Brassai utca
+  -
+    year: 1945
+    ro: Brassai utca / Strada Gutenberg
+    hu:
+  -
+    year: 1964
+    ro: Strada Brassai Samuel
+    hu:
