--- a/metadata/7933104.yaml
+++ b/metadata/7933104.yaml
@@ -1,3 +1,39 @@
 id: 7933104
 name: Strada Mihail Kogălniceanu
 slug: mihail-kogalniceanu
+description:
+  hu: Feltételezés szerint neve akkor keletkezett, amikor a városnak ezen a részén még nem létezett a városfal és a Házsongárd aljáig bemerészkedtek télen a farkasok. Más vélemény szerint, a közeli erdőből idáig hallattszott  a farkasüvöltés. Herepei János szerint, a középkori letelepedés alkalmával kapta, ahol a Kende törzs Farkas nevet viselő nemzetsége telepedett le először.
+  ro: După unele presupuneri, numele străzii a fost creat la vremea în care în această porțiune a orașului încă nu exista zid și în perioada iernii lupii îndrazneau să pătrundă până în partea de jos a cimitirului Házsongárd. Surse scrise relatează, că urlatul lupilor din pădurea din apropriere se auzea până aici. Conform lui János Herepei, strada și-a primit numele după neamul Farkas, care a fost primul neam din cadrul tribului Kende care s-a așezat aici în perioada medievală. 
+historical_names:
+  -
+    year: 1453
+    ro: Luporium
+    hu: 
+  -
+    year: 1466
+    ro: Strada Lupului
+    hu: Külső-Farkas utca - Farkas utca
+  -
+    year: 1603
+    ro:
+    hu: Wolffengass
+  -
+    year: 1923
+    ro: Strada Cogălniceanu
+    hu:
+  -
+    year: 1933
+    ro: Strada Kogălniceanu
+    hu:
+  -
+    year: 1941
+    ro:
+    hu: Farkas utca
+  -
+    year: 1945
+    ro: Farkas utca, Strada Mihail Kogălniceanu
+    hu:
+  -
+    year: 1964
+    ro: Strada Mihail Kogălniceanu
+    hu:
