--- a/metadata/23893849.yaml
+++ b/metadata/23893849.yaml
@@ -2,36 +2,30 @@ id: 23893849
 name: Strada Émile Zola
 slug: emile-zola
 description:
-  ro: |
-    Această stradă a fost o uliță secundară spre interiorul cetății vechi, 
-    pe care în anul 1608 s-a construit o casă în care funcționau servicii 
-    de schimb valutar și o monetărie, unde se băteau monede de aur. 
-    La sfârșitul secolului al IXI.-lea, casa a fost demolată în vederea lărgirii străzii, 
-    care mai apoi a devenit strada Cornișei.
-  hu: |
-    Nevét az Óvárba vezető sikátorként kapta. 
-    Az 1608-ban épült pénzbeváltó és aranyverő házat a XIX. század végén lebontották, 
-    s a skátort utcává szélesítették. Ekkor Kornis utca lett. 
-historical_names:
+  hu: Nevét az Óvárba vezető sikátorként kapta. Az 1608-ban épült pénzbeváltó és aranyverő házat a XIX. század végén lebontották, s a skátort utcává szélesítették. Ekkor Kornis utca lett. 
+  ro: Această stradă a fost o uliță secundară spre interiorul cetății vechi, pe care în anul 1608 s-a construit o casă în care funcționau servicii de schimb valutar și o monetărie, unde se băteau monede de aur. La sfârșitul secolului al IXI.-lea, casa a fost demolată în vederea lărgirii străzii, care mai apoi a devenit strada Cornișei.
+historical_name:
   -
     year: 1658
-    ro: Óvári szoros (Pasajul cetății) 
+    ro: Pasajul cetății
     hu: Óvári szoros
-  - 
+  -
     year: 1869
-    ro: Kornis utca (Strada Cornișei)
-    hu: 
+    ro: Strada Cornișei
+    hu: Kornis utca
   -
     year: 1923
     ro: Strada General Neculcea
-    hu: 
+    hu:
   -
     year: 1941
-    ro: Kornis utca (Strada Cornișei) 
+    ro: Strada Cornișei
     hu: Kornis utca
-  - 
+  -
     year: 1945
-    ro: Kornis utca (Strada Cornișei), Strada Émile Zola
-  - 
-    year: 1964
+    ro: Kornis utca, Strada Émile Zola
+    hu:
+  -
+    year: 1965
     ro: Strada Émile Zola
+    hu: 
