--- a/metadata/46331380.yaml
+++ b/metadata/46331380.yaml
@@ -1,3 +1,27 @@
 id: 46331380
 name: Strada Samuil Micu
 slug: samuil-micu
+description:
+  hu: A régi városfal tövében elnyúló utca, amelynek nyugati oldala azután alakult ki, miután megszűnt a városfalak erődjellege, és a falak tövébe is lehetett építkezni.
+  ro: Strada se întinde de-alungul vechiului zid al cetătii; partea de vest a străzii s-a format după ce zidurile orașului și-au pierdut funcționalitatea de fortificație, iar construcțiile au fost permise de-alungul zidului.
+historical_names:
+  -
+    year: 1852 
+    ro: Strada Trandafirilor
+    hu: Rózsa utca
+  -
+    year: 1923
+    ro: Strada Samuil Micu
+    hu:
+  -
+    year: 1941
+    ro: Strada Trandafirilor
+    hu: Rózsa utca
+  -
+    year: 1945
+    ro: Rózsa utca, Strada Samuil Micu
+    hu:
+  -
+    year: 1964
+    ro: Strada Samuil Micu
+    hu:
