--- a/metadata/7933774.yaml
+++ b/metadata/7933774.yaml
@@ -1,3 +1,51 @@
 id: 7933774
 name: Piața Lucian Blaga
 slug: piata-lucian-blaga
+description:
+  hu: A Belső-Szén utca végétől nyugatra, Hegedűs Sándor, a London (Arany János) és az Alsó-Szén, a Felső-Szén és a Külső-szén között elterülő kis tér. Kialakításához nagymérékben hozzájártul az, hogy a Házsongárdból rre folyó cigánypatakot a 19. Század végén csatornába bújtatták. A 60-as években elkezdődött a tér ujraépítések, ekkor hűromszögűből négyszögűvé alakították. Ekkor az 1904-ben itt felállított Szent György szobrot a Farkas utcába helyezték át, a tér nevét pedig Piața Păcii-ra váltották.
+  ro: Mica piață s-a situează în capătul vestic al străzii Napoca și este delimitată de străzile Gh. Şincai, Bulevardul Regele Ferdinand, Clinicilor, Gh. Șincai, Vicotr Babeș. Dezvoltarea pieței se datorează în mare parte canalizării așa numitului Pârâul al Țiganilor la sfârșitul secolului al 19.-lea, care cobora din Cimitirul Házsongárd. În anii de după 1960 a început sistematizarea pieței, transformarea lui în formă dreptunchiulară. Tot în acest an, statuia Sf. Gheorghe, copie a celei din Praga dezvelită aici în anul 1905 este mutată pe strada Kogălniceanu, în fața bisericii reformate.
+historical_names: 
+  -
+    year: 1852
+    ro: Piața fânului
+    hu: Szénautcai piac 
+  -
+    year: 1899
+    ro: Piața Londra
+    hu: London tér
+  -
+    year: 1899
+    ro: Piața Arany János
+    hu: Arany János tér
+  -
+    year: 1904
+    ro: Piața Sf. Gheorghe
+    hu: Szentgyörgy tér
+  -
+    year: 1917
+    ro: Piața Sf. Gheorghe
+    hu: Szent György tér
+  -
+    year: 1923
+    ro: Piața Sf. Gheorghe
+    hu: 
+  -
+    year: 1933
+    ro: Piața Gheorghe Sion
+    hu: 
+  -
+    year: 1941
+    ro: Piața Sf. Gheorghe
+    hu: Szentgyörgy tér 
+  -
+    year: 1945
+    ro: Szentgyörgy tér/Piața Sf. Gheorghe
+    hu: Szentgyörgy tér/Piața Sf. Gheorghe 
+  -
+    year: 1964
+    ro: Piața Păcii/Béke tér 
+    hu: Piața Păcii/Béke tér 
+  - 
+    year: 1995 azi
+    ro: Piața Lucian Blaga (1995)
+    hu:
