--- a/metadata/7932712.yaml
+++ b/metadata/7932712.yaml
@@ -2,8 +2,10 @@ id: 7932712
 name: Strada Avram Iancu
 slug: avram-iancu
 description:
-  hu: A városfalon belüli Torda utca falakon kívüli folytatásának tekintett utca. A Belső-Torda utcának a 19. Század közepéig  Torda utca volt a neve, és a Nagypiacról nagyjából a Tordakapuig húzódott. Később Egyetem utcának nevezték. A Külső-Torda utca a XIX. század második felében az itt húzódó várfal lebontása után és a városárok feltöltése után kezdett kialakulni. A feltöltés mértékét mutatja a farkas-utcai házaknak a mai utca szintjénél jóval mélyebben fekvő udvar-, illetve kertszintje.
-  ro: Strada Avram Iancu este defapt extensia din exteriorul zidului cetății a vechii străzi numită Strada Turzii, care initial a fost și strada Sibiului. Strada a fost compusă din două părți. Strada Turzii Interioară, care se situa între Piața Centrală și Turnul de POartă din Strada Turzii, care mai târziu a devenit strada Universității. A doua stradă s-a numit Strada Turzii Exterioară și a început să se dezvolte după demolarea vechiului zid al cetății și al șanțului de fortificație situate aici. Urmele schimbărilor se văd și astăzi: nivelul curților și grădinilor din strada Kogălniceanu sunt mult mai joase decât nivelul caselor construite cu front continuu.
+  hu: |
+    A városfalon belüli Torda utca falakon kívüli folytatásának tekintett utca. A Belső-Torda utcának a 19. Század közepéig  Torda utca volt a neve, és a Nagypiacról nagyjából a Tordakapuig húzódott. Később Egyetem utcának nevezték. A Külső-Torda utca a XIX. század második felében az itt húzódó várfal lebontása után és a városárok feltöltése után kezdett kialakulni. A feltöltés mértékét mutatja a farkas-utcai házaknak a mai utca szintjénél jóval mélyebben fekvő udvar-, illetve kertszintje.
+  ro: |
+    Strada Avram Iancu este defapt extensia din exteriorul zidului cetății a vechii străzi numită Strada Turzii, care initial a fost și strada Sibiului. Strada a fost compusă din două părți. Strada Turzii Interioară, care se situa între Piața Centrală și Turnul de POartă din Strada Turzii, care mai târziu a devenit strada Universității. A doua stradă s-a numit Strada Turzii Exterioară și a început să se dezvolte după demolarea vechiului zid al cetății și al șanțului de fortificație situate aici. Urmele schimbărilor se văd și astăzi: nivelul curților și grădinilor din strada Kogălniceanu sunt mult mai joase decât nivelul caselor construite cu front continuu.
 historical_names:
   -
     year: 1453
@@ -26,7 +28,7 @@ historical_names:
     ro: Strada Universității
     hu: Egyetem utca
   -
-    year: ?
+    year: \?
     ro: Strada Petőfi
   -
     year: 1923
@@ -45,9 +47,9 @@ historical_names:
     ro: Str. Puskin, Str. Universității
     hu: 
   -
-    year: ?
+    year: \?
     ro: Strada Petőfi
     hu: Petőfi utca
   -
-    year: ?
+    year: \?
     ro: Strada Avram Iancu
