Updated Regele Ferdinand

--- a/metadata/55556740.yaml
+++ b/metadata/55556740.yaml
@@ -2,8 +2,10 @@ id: 55556740
 name: Bulevardul Regele Ferdinand
 slug: regele-ferdinand
 description:
-  hu: Legkorábban említett kolozsvári utca, Platea Pontis néven. Itt építették fel a Hídkaput, a város egyik legrégebbi bástyájában, amely az óvár két kapujának az egyike volt. Ugyanakkor a város legrégebbi hídja is itt épült a XII század körül, a Vashíd, amely a Kisszamos (Malomárok) fölötti híd volt.  A XIX. század első felében gyors feljlődésnek indult. Nevét a Wesselényi család itteni kertjéről kapta, az 1848-as szabadsțgharcot követően.
-  ro: Este strada cu cea mai veche referință, care datează din anul 1362. Aici s-a construit una din cele mai importante edificii ale orașului vechi, Turnul Apei, care era una din cele două porți ale orașului. Tot în această stradă s-a construit în secolul al XII.-lea și primul pod al Clujului, Podul de Fier, peste Someșul Mic/Canalul Morii. Strada s-a dezvoltat brusc de la prima jumătate a secolului XIX, iar după revoluția din 1848 a primit numele familiei de nobili Wesselényi, care ava grădini amenajate în această zonă.
+  hu: |
+    Legkorábban említett kolozsvári utca, Platea Pontis néven. Itt építették fel a Hídkaput, a város egyik legrégebbi bástyájában, amely az óvár két kapujának az egyike volt. Ugyanakkor a város legrégebbi hídja is itt épült a XII század körül, a Vashíd, amely a Kisszamos (Malomárok) fölötti híd volt.  A XIX. század első felében gyors feljlődésnek indult. Nevét a Wesselényi család itteni kertjéről kapta, az 1848-as szabadsțgharcot követően.
+  ro: |
+    Este strada cu cea mai veche referință, care datează din anul 1362. Aici s-a construit una din cele mai importante edificii ale orașului vechi, Turnul Apei, care era una din cele două porți ale orașului. Tot în această stradă s-a construit în secolul al XII.-lea și primul pod al Clujului, Podul de Fier, peste Someșul Mic/Canalul Morii. Strada s-a dezvoltat brusc de la prima jumătate a secolului XIX, iar după revoluția din 1848 a primit numele familiei de nobili Wesselényi, care ava grădini amenajate în această zonă.
 historical_names:
   -
     year: 1362
@@ -15,16 +17,16 @@ historical_names:
     hu: Híd utca
   -
     year: 1898
-    ro: Strada Wesselényi – Strada Londra
-    hu: Wesselényi utca  - London utca
-  -
+    ro: Strada Wesselényi
+    hu: Wesselényi utca
+  -    
     year: 1923
     ro: Calea Regele Ferdinand
     hu:
   -
     year: 1940
-    ro: 
-    hu: Wesselényi utca  
+    ro:
+    hu: Wesselényi utca 
   -
     year: 1945
     ro: Wesselényi utca, Str. Dózsa György
@@ -32,6 +34,10 @@ historical_names:
   -
     year: 1957
     ro: Str. Dózsa Gheorghe – Dózsa György utca
+    hu:
+  -
+    year: 1964
+    ro: Strada Gheorghe Dózsa
     hu: 
   -
     year: 1999
