--- a/metadata/25717208.yaml
+++ b/metadata/25717208.yaml
@@ -1,3 +1,29 @@
 id: 25717208
 name: Strada Paris
 slug: paris
+description:
+  hu: |
+    A Kétvízközi negyednek volt a része. Nevét a XIX. században, az utca eleji nagy kiterjedésű, egyházi tulajdonban levő majorokról kapta. Ebben az utcában kapott helyet a város legrégebbi izraelita imahelye is.
+  ro: |
+    A fost parte a zonei locuite de agricultorii Hostăzeni, fermele cărora au fost repartizate bisericilor după ce aceștia s-au stabilit la periferia orașului. De aici și-a primit strada numele inițial.  Pe lângă asta, pe această strada s-a aflat și primul loc de rugăciune a israeliților din Cluj.
+historical_names:
+  -
+    year: 1865
+    hu:
+    ro: Pap utca (Strada Preotului) 
+  - 
+    year: 1923
+    hu:
+    ro: Strada Paris 
+  - 
+    year: 1941
+    hu: 
+    ro: Pap utca
+  - 
+    year: 1945
+    hu: 
+    ro: Pap utca, Strada Paris
+  -
+    year: 1964
+    hu:
+    ro: Strada Paris
