--- a/metadata/27173012.yaml
+++ b/metadata/27173012.yaml
@@ -1,3 +1,29 @@
 id: 27173012
 name: Strada Frédéric Joliot-Curie
 slug: frederic-joliot-curie
+description:
+  hu: |
+    Nevét az Unitárius Kollégium építésekor a helyhatóság adta. Berde keresztneve nem Mózes, hanem Mózsa volt. Úgy tűnik, a névadók, a névadók ezt a Mózes becéző változatának tekintették, holott a székelyek körében a Mózsa a megszokott.
+  ro: |
+    Strada și-a primit primul nume în timpul construirii Colegului Unitarian.  Omul politic și sponsorul acestor construcții însă se numea defapt Berde Mózsa, dar acest nume a fost considerat unul de alint și schimbat. Strada poartă astăzi numele  chimistului francez, laureat a lPremiului Nobel pentru chimie în anul 1935.
+historical_names:
+  -
+    year: 1900
+    hu:
+    ro: Berde Mózes utca 
+  - 
+    year: 1923
+    hu:
+    ro: Strada Berde
+  - 
+    year: 1941
+    hu:
+    ro: Berde Mózes utca
+  - 
+    year: 1945
+    hu: 
+    ro: Berde mózes utca, Strada Berde Mózes
+  - 
+    year: 1964
+    ro: Strada Frédéric Juliot-Curie
+    hu:
