--- a/metadata/32010580.yaml
+++ b/metadata/32010580.yaml
@@ -1,3 +1,33 @@
 id: 32010580
 name: Strada Constanța
 slug: constanta
+description:
+  hu: |
+    A Kisszamos és a Hosszú utca közti utca, Később a trencsin tér északi sarkából, a Külső- Magyar ( 1989. December 21) utca elejéről északnak nyíló szakasza is kiépült. Jobb oldalán a Wesselényi-kert terült el. Itt épült fel az 1892 és 1895 között a Tanítóképző, amelynek alapítójáról, Eötvös Józsefről nevezték el újra az utcát. Eleinte beépítetlen, puszta volt, innen ered a neve.
+  ro: |
+    Inițial a fost un teritoriu pustiu, după care a devenit strada dintre străzile Someșul Mic și Strada Lungă, mai apoi s-a dezvoltat și partea dintre colțul nordic al Pieței Trencsin (Cipariu) și începutul  cu deschidere nordic al străzii Ungurilor. Pe partea deaptă strada era vecină cu grădinile Wesselényi. Între 1892 și 1895 aici s-a construit casa învățătorilor, după care numele s-a schimbat în Eötvös József, cel care a înființat instituția.
+historical_names:
+  -
+    year: 1869
+    hu:
+    ro: Puszta utca (Strada Pustiului) 
+  - 
+    year: 1899
+    hu:
+    ro: Eötvös utca (Strada Eötvös) 
+  - 
+    year: 1923
+    hu:
+    ro: Strada General Berthelot 
+  - 
+    year: 1941
+    hu:
+    ro: Eötvös utca (Strada Eötvös) 
+  -
+    year: 1945
+    hu:
+    ro: Eötvös utca, Strada General Berthelot
+  - 
+    year: 1964
+    hu:
+    ro: Strada Constanța
