--- a/metadata/7976448.yaml
+++ b/metadata/7976448.yaml
@@ -1,3 +1,30 @@
 id: 7976448
 name: Strada Cuza Vodă
 slug: cuza-voda
+description:
+  hu: |
+    A XIX. század elején kiterjedt kert, a postamester kertje volt itt, innét az utca neve. A lovas posta korában a Postaréttel együttesen a postamester földje volt azért, hogy a lovaknak takarmányt termesszen.
+  ro: |
+    La începutul secolului al XIX.-lea aici se situa grădina stimabilului diriginte al poștei, de aici provine primul nume al străzii. Pe vremea când poștașii transportau corespondența pe cai, grădina avea funcționalitatea de a oferi hrană animalelor.
+historical_names:
+  -
+    year: 1869
+    hu:
+    ro: Postakert utca (Strada Grădina Poștei)
+  - 
+    year: 1923
+    hu:
+    ro: Strada Clemenceanu
+  - 
+    year: 1941
+    hu:
+    ro: Postakert utca (Strada Grădina Poștei) 
+  - 
+    year: 1945
+    hu:
+    ro: Postakert utca, Strada Clemenceau
+  - 
+    year: 1964
+    hu:
+    ro: Strada Cuza Vodă 
+
