--- a/metadata/7976593.yaml
+++ b/metadata/7976593.yaml
@@ -1,3 +1,33 @@
 id: 7976593
-name: Strada Gheorghe Barițiu
-slug: gheorghe-baritiu
+name: Strada George Barițiu
+slug: george-baritiu
+description:
+  hu: |
+    Nevét a mai főposta mellett, a Kisszamos (Malomárok) bal partján, a XVIII. század első harmadában épült Nagymalomról kapta a nevét, amelyet az 1920-as években lebontottak. Ezt a malmot tartották a város nagy malmának. Gátja az 1960-as évekig fennállt, amleyet a part rendezésekor tűntettek el.
+  ro: |
+    Și-a primit numele după moara care a fost construită la începutul secolului al XVIII-lea și demolată în anul 1920. Moara s-a situat lângă poșta centrală de astăzi (Calea regele Ferdinand), pe partea stângă a Canalului Morii. Aceasta a fost cea mai mare moară a orașului. Barajul morii a existat până în anii 1960, a ot demolat cu ocazia reabilitărilor pe malul Canalului.
+historical_names:
+  - 
+    year: 1852
+    hu: 
+    ro: Malom utca (Strada Morii)
+  - 
+    year: 1869
+    hu:
+    ro: Nagymalom utca (Strada Morii Mari) 
+  -  
+    year: 1923
+    hu: 
+    ro: Strada Gheorghe Barițiu 
+  - 
+    year: 1941
+    hu:
+    ro: Malom utca (Strada Morii)
+  - 
+    year: 1945
+    hu:
+    ro: Malom utca, Strada Gheorghe Barițiu
+  - 
+    year: 1964
+    hu:
+    ro: Strada George Barițiu
