--- a/metadata/177921037.yaml
+++ b/metadata/177921037.yaml
@@ -2,8 +2,10 @@ id: 177921037
 name: Strada Sextil Pușcariu
 slug: sextil-puscariu
 description: 
-  hu: Bocskai István és Mátyás király szülőháza között nyíló utca. Nevét az Óvárnak az utca derékszögű kanyarjában álló egykori délkeleti szöglettornyáról, a később börtönné alakított Toronyról kapta, amely valószínűleg a XIII. század első felében épült fel a régi várfal saroktornyaként. Amikor a Szent Mihály- templom piactere körül megnövekedett várost a XV. század elejétől fallal kerítették, védelmi rendeltetése megszűnt. Lehet ekkor kezdték tömlöcként használni a régi szeglettornyot.
-  ro: Încă din epoca cetății vechi, strada turnului pornea dintre casa Bocskai și casa Matei Corvin. Numele l-a primit datorită turnului sud-estic situat în cotitura străzii, care a fost construit în prima parte a secolului al XIII.-lea și era parte componentă a zidului vechi al cetății. Când orașul a început să se dezvolte în jurul bisericii Sfântul Mihail la începuturile secolului al XV.-lea, turnul a fost cuprins de ziduri noi, pierzându-și astfel rolul inițial și devenind temniță.
+  hu: |
+    Bocskai István és Mátyás király szülőháza között nyíló utca. Nevét az Óvárnak az utca derékszögű kanyarjában álló egykori délkeleti szöglettornyáról, a később börtönné alakított Toronyról kapta, amely valószínűleg a XIII. század első felében épült fel a régi várfal saroktornyaként. Amikor a Szent Mihály- templom piactere körül megnövekedett várost a XV. század elejétől fallal kerítették, védelmi rendeltetése megszűnt. Lehet ekkor kezdték tömlöcként használni a régi szeglettornyot.
+  ro: |
+    Încă din epoca Cetății Vechi, Strada Turnului se întindea între casa Bocskai și casa Matei Corvin. Numele îl ia de la turnul sud-estic situat în cotitura străzii, care a fost construit în prima parte a secolului al XIII-lea și care era parte din zidul vechi al cetății. Când orașul a început să se dezvolte în jurul bisericii Sfântul Mihail la începuturile secolului al XV-lea, turnul a fost cuprins de ziduri noi și și-a pierdut rolul inițial, devenind temniță.
 historical_names:
   -
     year: 1852
