--- a/metadata/23893728.yaml
+++ b/metadata/23893728.yaml
@@ -3,7 +3,7 @@ name: Strada Inocențiu Micu Klein
 slug: inocentiu-micu-klein
 description: 
   hu: Nevét valószínűleg egy család nevéről kapta, akárcsak a Farkas utca esetében.
-  ro: Denumirea provine probabil din numele unei familii care a locuit aici, ca și în cazul străzii Farkas.
+  ro: Denumirea provine probabil din numele unei familii care a locuit aici, ca și în cazul străzii Farkas.[??]
 historical_names:
   -
     year: 1731
