--- a/metadata/26598953.yaml
+++ b/metadata/26598953.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     A XIX. század elején kezdett kialakulni. Nevét a Kisszamos folyását követő utcaként kapta.
   ro: |
-    Strada s-a dezvoltat la începutul secolului al XIX.-lea și s-a numit Strada Someșul Mic, pentru că se situa în paralel cu Canalul Morii, cunoscut sun acest nume. 
+    Strada s-a dezvoltat la începutul secolului al XIX-lea și s-a numit Strada Someșul Mic, pentru că se situa în paralel cu Canalul Morii, cunoscut sub acest nume. 
 historical_names:
   -
     year: 1869
