--- a/metadata/7934003.yaml
+++ b/metadata/7934003.yaml
@@ -1,3 +1,25 @@
 id: 7934003
 name: Strada Gheorghe Șincai
 slug: gheorghe-sincai
+description:
+  hu: |
+    A Belső-Monostor (Únió, Memorandumului) utca végén a városfalon kívül, baloldalt nyíló, a Belső-Szén (Jókai, Napoca) utca végéig vezető utca. Akár a London (Arany Jáos, Petru Maior) utca, ez is csupán a városfal hadászati jelentőségének megszűnése után épülhetett ki.
+  ro: |
+    Este strada situată în afara zidului cetății, care pornea de la capătul străzii Memorandumului până la strada Napoca. Ca și în cazul străzii Pentru Maior, dezvoltarea acestei a fost posibilă doar după ce zidul cetății și-a pierdut funcționalitatea de zid protector al orașului.
+historical_names:
+  -
+    year: 1852-1857 
+    ro: Páris utca (Strada Paris)
+  -
+    year: 1914
+    ro: Hegedűs Sándor utca (Strada Hegedűs Sándor)
+  -
+    year: 1923 
+    ro: Str. Șincai
+  -
+    year: 1945
+    ro: Hegedüs Sádor utca, Str. Șincai utca
+  -
+    year: 1964
+    ro: Str. Șincai
+
