--- a/metadata/24283514.yaml
+++ b/metadata/24283514.yaml
@@ -1,3 +1,29 @@
 id: 24283514
 name: Strada General Dragalina
 slug: dragalina
+description:
+  hu: |
+    Nevét a Kőmálon épült vár sánca alatti útként kapta. A XIX: század vége felé Sáncalja utcának is nevezték. Szabó T. Attila szerint az 1899-ben bekövetkezett névváltoztatáshoz az is hozzájárulhatott, hogy a sáncoldali és a sáncalji kunyhókban és házakban lakó rossz hírű népség miatt a sáncalji csöppet sem dicsérő jelző volt. Így a az Erzsébet-híd é s a Bornyúmáli út (Strada E. Grigorescu) között lakó módosabb polgárokra való tekintettel az utca nevét Fellegvári útra változtatták. 
+    Kőmál- A Szamos bal partján emelkedő, mintegy ötven méter magas, délre néző oldalán található sziklás hegy. Tetején, északi és keleti lejtőin a XIX. század végéig a város szőlői és gyümölcsösei terültek el. A Rákóczi-szabadságharc 1711. évi leverése után 1716-tól, a császári katonaság részére, a város fékentartására a Kőmál tetején földsáncokkal kerített várat emeltek, hosszú évek után Fellegvárlett a neve.
+  ro: |
+    Strada a primit acest nume pentru că se situa exact în vecinătatea șanțului de protecție la poalele dealului Cetățuia. Istoricul Szabó T. Attila crede că schimabarea numelui se datorează în mare parte faptului că adjectivul ‘șanț’ exprima nemulțumirea celorlalți locuitori din zonă față de oamenii care trăiau în condiții mizere în case mici, dărăpănate.
+    Dealul Kőmál (Cetățuia de azi) este dealul de pe stânfa Someșului, pe care până în secolul al XIX-lea se întindeau livezile și podgorille orașului. După învingerea revoluției Rákóczi din anul 1711, în anul 1716 s-a ordonat săparea unor șanțuri de protecție a orașului la poalele dealului și ridicarea unei cetăți, care a primit numele de Cetățuia.
+historical_names:
+  -
+    year:
+    ro: Sáncalja út / Strada Șanțului
+  - 
+    year: 1899
+    ro: Fellegvári út / Drumul Cetățuia 
+  - 
+    year: 1923
+    ro: Calea Genreal Drăgălina 
+  - 
+    year: 1941
+    ro: Fellegvári út / Drumul Cetățuia 
+  - 
+    year: 1945
+    ro: Fellegvári út, Strada General Dragalina
+  - 
+    year: 1964
+    ro: Strada General Drăgălina
