Added/removed streets

--- a/metadata/31623244.yaml
+++ b/metadata/31623244.yaml
@@ -1,3 +1,16 @@
 id: 31623244
 name: Strada Voltaire
 slug: voltaire
+description:
+  ro: |
+  hu: |
+historical_names:
+  -
+    year:
+    ro:
+  - 
+    year:
+    ro:
+  - 
+    year:
+    ro:
