--- a/metadata/13342765.yaml
+++ b/metadata/13342765.yaml
@@ -2,8 +2,10 @@ id: 13342765
 name: Calea Moților
 slug: motilor
 description:
-  hu: A Monostor-kapun kívül, Kolozsmonostor felé vezető utca.
-  ro: Este strada spre satul Mănăștur în afara Porții Mănășturului. Satul Mănăștur este parte a Clujului începând cu anul 1895.
+  hu: |
+    A Monostor-kapun kívül, Kolozsmonostor felé vezető utca.
+  ro: |
+    Este strada spre satul Mănăștur în afara Porții Mănășturului. Satul Mănăștur este parte a Clujului începând cu anul 1895.
 historical_names: 
   -
     year: 1852-1899
