--- a/metadata/23784852.yaml
+++ b/metadata/23784852.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     Tisztviselőtelepi utca, amely az 1900-as évek elején kezdett kialakulni.
   ro: |
-    A fost o stradă din cartierul locuit în mare parte de funcționari, dezvoltarea ei a început la ănceputul anilor 1900.
+    A fost o stradă din cartierul locuit în mare parte de funcționari, dezvoltarea ei a demarat la începutul anilor 1900.
 historical_names:
   -
     year: 1914
