--- a/metadata/31622052.yaml
+++ b/metadata/31622052.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     Valószínűleg az utca elején, baloldalt, a Puszta utca jobb oldaláig terjedő Wesselényi- kertről kapta a nevét.
   ro: |
-    Strada a fost numită Wesselényi, pentru că se afla în vecinătatea grădinilor care aparținea familiei de nobili cu același nume.
+    Strada a fost numită Wesselényi, pentru că se afla în vecinătatea grădinilor care aparțineau familiei de nobili cu același nume.
 historical_names:
   -
     year: 1852
