--- a/metadata/43707065.yaml
+++ b/metadata/43707065.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     A Görbe nevet azért kapta, mert eredetileg az utca nem ott kezdődött ahol ma, hanem a Kurta szappan (Dávid Ferenc) utcától, majd a második ház után derékszögben jobbra kanyarodott.
   ro: |
-    Strada a primit numele de ‘Cotită’ pentru că pornea din strada Dávid Ferenc și după a doua casă se curba spre dreapta, formând un unghi, cot, de 90 de grade.
+    Strada a primit numele de ‘Cotită’ pentru că pornea din strada Dávid Ferenc și, după a doua casă, se curba cu 90 de grade spre dreapta.
 historical_names:
   -
     year: 1852-1857
