--- a/metadata/7976448.yaml
+++ b/metadata/7976448.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     A XIX. század elején kiterjedt kert, a postamester kertje volt itt, innét az utca neve. A lovas posta korában a Postaréttel együttesen a postamester földje volt azért, hogy a lovaknak takarmányt termesszen.
   ro: |
-    La începutul secolului al XIX.-lea aici se situa grădina stimabilului diriginte al poștei, de aici provine primul nume al străzii. Pe vremea când poștașii transportau corespondența pe cai, grădina avea funcționalitatea de a oferi hrană animalelor.
+    La începutul secolului al XIX-lea aici se situa grădina stimabilului diriginte al poștei, de unde provine primul nume al străzii. Pe vremea când poștașii transportau corespondența pe cai, grădina avea funcțiunea de a oferi hrană animalelor.
 historical_names:
   -
     year: 1869
