--- a/metadata/13345555.yaml
+++ b/metadata/13345555.yaml
@@ -2,9 +2,10 @@ id: 13345555
 name: Bulevardul 21 Decembrie 1989
 slug: 21-decembrie-1989
 description:
-  hu: A Nagypiac északkeleti sarkából nagyjából keletre nyíló a Magyarkapuig, majd Szentpéterig   vezető utca. A XVII. századtól kezdve a várfalon belüli részét Belső-, a városfalon kívüli részét   Külső-Magyar utcának nevezték. 1372-ben tesznek róla először említést. Neve egyesek szerint azzal magyarázható, hogy a XIV. században a városban a szászok utcáitól eltérően, magyar többségű lehetett. Elsősorban a szászok Hosszú utcának hívták.
+  hu: |
+    A Nagypiac északkeleti sarkából nagyjából keletre nyíló a Magyarkapuig, majd Szentpéterig   vezető utca. A XVII. századtól kezdve a várfalon belüli részét Belső-, a városfalon kívüli részét   Külső-Magyar utcának nevezték. 1372-ben tesznek róla először említést. Neve egyesek szerint azzal magyarázható, hogy a XIV. században a városban a szászok utcáitól eltérően, magyar többségű lehetett. Elsősorban a szászok Hosszú utcának hívták.
   ro: |
-    Prima referință despre stradă datează din 1372. Sașii o numeau Strada Lungă, după care în secolul XIV au redenumit-o Strada Ungurilor datorită locuitorilor predominant maghiari. Începând cu secolul XVII, porțiunea din interiorul zidului cetății a străzii se numea Strada Ungurilor de jos/centrală, iar porțiunea din afara zidurilor cetății era numită Strada Ungurilor de sus/exterioară. Strada se situa între colțul nord-estic al pieței centrale și Turnul de Poartă din Strada Ungurilor, până la piața Sf. Petru.
+    Prima referință despre stradă datează din 1372. Sașii o numeau Strada Lungă, după care în secolul XIV au redenumit-o Strada Ungurilor datorită locuitorilor predominant maghiari. Începând cu secolul XVII, porțiunea din interiorul zidului cetății a străzii se numea Strada Ungurilor de jos/centrală, iar porțiunea din afara zidurilor cetății se numea Strada Ungurilor de sus/exterioară. Strada se situa între colțul nord-estic al pieței centrale și Turnul de Poartă din Strada Ungurilor, până la piața Sf. Petru.
 historical_names:
   -
     year: 1453 
@@ -12,7 +13,7 @@ historical_names:
     hu: Hosszú utca
   -
     year: 1599
-    ro: PLatea Extra
+    ro: Platea Extra
     hu: Külső hosszú
   -
     year: 1852-1894
