--- a/metadata/23287428.yaml
+++ b/metadata/23287428.yaml
@@ -6,8 +6,8 @@ description:
     A Patába vezető útként kapta a nevét. A Györgyfalvi és a Paai út találkozása előtt, a későbbi Szondy utca felől folyó cigánypatakon híd, a Piski-híd vezetett át. Bár a híd valamikor az első Világháború táján eltűnt - a Cigánypatakot csatrnába bújtatták -, az idősebbek még az 1940-es években is emlegették. A hídon áthaladva kezdődött a Patai út.
     1856-ban a Pata utca és a Györgyfalvi út sarkán álló házakat lebontották. A tömbházak - amelyek helyükre épültek -  alapjának ásásakor 26 honfoglalás kori sírra bukkantak. A helyszínen dolgozó régészek vezetője elismerte ugyan, hogy honfoglalás koriak, de amint az akkori hivatalos nézet feje tetejére állított elmélete alapján mondta, a XIII. századból valók, mert a magyarok akkor jöttek ide. 
   ro: |
-    A fost drumul care ducea spre satul Pata. Înaintea de intersecția drumurilor spre Gheorgheni și Paai a fost un pod, peste ”Pârâul Țiganilor”, care se numea Podul Piski.  Cu toate că acest pod a fost demolat în perioada primului război mondial și pârâul a fost canalizat, în anii 1940 bătrânii Clujului încă vorbeau despre podul care ducea pe drumul spre Pata.
-    În anul 1856 casele ce pe colțul străzii Pata cu strada Gheorgheni au fost demolate. Mai târziu, cu ocazia construirii blocurilor, și săpăturilor s-au descoperit 26 de morminte din oerioada descălecării maghiarilor.
+    A fost drumul care ducea spre satul Pata. Înainte de intersecția drumurilor spre Gheorgheni și Paai exista un pod peste ”Pârâul Țiganilor”, care se numea Podul Piski. Cu toate că acest pod a fost demolat în perioada Primului Război Mondial și pârâul a fost canalizat, în anii 1940 bătrânii Clujului încă vorbeau despre podul care ducea pe drumul spre Pata.
+    În anul 1856 casele ce pe colțul străzii Pata cu strada Gheorgheni au fost demolate. Mai târziu, cu ocazia construirii blocurilor și săpăturilor, s-au descoperit 26 de morminte din perioada descălecării maghiarilor.
 historical_names:
   -
     year: 1852
