--- a/metadata/23893728.yaml
+++ b/metadata/23893728.yaml
@@ -2,8 +2,10 @@ id: 23893728
 name: Strada Inocențiu Micu Klein
 slug: inocentiu-micu-klein
 description: 
-  hu: Nevét valószínűleg egy család nevéről kapta, akárcsak a Farkas utca esetében.
-  ro: Denumirea provine probabil din numele unei familii care a locuit aici, ca și în cazul străzii Farkas.[??]
+  hu: |
+    Nevét valószínűleg egy család nevéről kapta, akárcsak a Farkas utca esetében.
+  ro: |
+    Denumirea provine probabil din numele unei familii care a locuit aici, ca și în cazul străzii Farkas.
 historical_names:
   -
     year: 1731
