--- a/metadata/23893810.yaml
+++ b/metadata/23893810.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     A Nagypiac délkeleti sarkából kelet felé nyíló, a Középkapui vezető legszélesebb utca. A falakon belüli város közepén vezető utcája volt. Mai nevét az 1989 December 21.-én életüket vesztett hősökről kapta, a Petru Groza sugárútból Eroilor sugárút lett.
   ro: |
-    Este cea mai lată stradă din oraș, situată între colțul sud-estic a Pieței Unirii și a Porții Uliței de Mijloc. Deja cu secole în urmă a fost strada principală din centrul orașului. Strada și-a primit numele de azi în amintirea celor ce au murit în 21 Decembrie 1989, Bulevardul Petru Groza s-a numit B-dul Eroilor.
+    Este cea mai lată stradă din oraș, situată între colțul sud-estic a Pieței Unirii și a Porții Uliței de Mijloc. De secole, este strada principală din centrul orașului. În amintirea celor ce au murit în 21 Decembrie 1989, Bulevardul Petru Groza a primit numele B-dul Eroilor.
 historical_names:
   -
     year: 1453
