--- a/metadata/23893843.yaml
+++ b/metadata/23893843.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     A Nagypiac északnyugati sarkából az Óvárba, Mátyás király szülőháza felé vezető szűk utca. Kezdetben az Óvárból kivezető út. A 6. szám alatt áll Mátyás király szülőháza áll. 
   ro: |
-    Inițial a fost strada de acces spre cetatea veche. Astăzi este strada îngustă care pornește din colțul nord-vestic al Pieței Unirii spre casa Matei Corvin, situată în incinta cetății vechi, la nr. 6 al acestei străzi.
+    Inițial a fost strada de acces spre cetatea veche. Astăzi este strada îngustă care pornește din colțul nord-vestic al Pieței Unirii spre casa Matei Corvin, situată în incinta cetății vechi, la nr. 6.
 historical_names:
   -
     year: 1869
