--- a/metadata/23893975.yaml
+++ b/metadata/23893975.yaml
@@ -5,10 +5,10 @@ description:
   hu: |
     Kezdettől Hidelve legjelentősebb utcája volt, amely később a vasútállomásig vezető hosszú utca lett. Az utca forgalma az 1870-es vasútállomás avatása után nőtt meg. A forgalom megkönnyítése érdekében az utca elején a közlekedést akadályozó szűk, sikátorszerű Zsidó utca lebontásával és a vashíd felépítésével főutcává alakították. Ezután rövid idő után teljesen átépítették, és elvesztette a mezőgazdálkodó-állattartó hóstáti lakosság által kialakított arculatát.
   ro: |
-    A fost strada principală a zonei din periferia orașului, care după 1870 a devenit foarte utilizată, fiind strada care ducea spre gară. Pentru a rezolva problemele ce îngreunau traficul, ulița Zsidó / Evreilor a fost demolată și a fost construit un pod de fier. Mai târziu zona a fost total sistematizată, pierzându-și aspectul de zonă periferică de agricultură a orașului, locuită de Hoștățeni.
+    A fost strada principală a zonei din periferia orașului. După 1870 a devenit intens utilizată, fiind strada care ducea spre gară. Pentru a rezolva problemele ce îngreunau traficul, ulița Zsidó / Evreilor a fost demolată și a fost construit un pod de fier. Mai târziu zona a fost total sistematizată, pierzându-și aspectul de zonă periferică cu caracter agricultural, locuită de Hoștezeni.
 historical_names:
   -
-    year: \?
+    year:
     hu:
     ro: Platea Maior 
   - 
