--- a/metadata/26615442.yaml
+++ b/metadata/26615442.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     Eleje a Házsongárdi temető keleti szélén, a város legrégebbi zsidó temetőjéig vezető útként a XIX. Század elején alakult ki.  Miután a XIX. Század végén az út bal oldalán, a zsidó temető előtt  katonai raktár épült, az útból utca lett. 
   ro: |
-    Strada a început să se dezvolte deja la începul secolului al XIX-lea, când începutul acesteia a fost drumul de la marginea cimitirului Házsongárd, care ducea spre cimitirul evreiesc, cel mai vechi cimitir din oraș. După ce la sfârștul aceluiaș secol s-a construit un depozit al armatei în fața cimitirului, acest drum a devenit stradă.
+    Strada a început să se dezvolte deja la începul secolului al XIX-lea, când începutul acesteia a fost drumul de la marginea cimitirului Házsongárd, care ducea spre cimitirul evreiesc, cel mai vechi cimitir din oraș. După ce la sfârștul aceluiași secol s-a construit un depozit al armatei în fața cimitirului, acest drum a devenit stradă.
 historical_names:
   -
     year: 1929
