--- a/metadata/26616052.yaml
+++ b/metadata/26616052.yaml
@@ -5,12 +5,11 @@ description:
   hu: |
     Az 1869 évi térkép szerint nem volt kijárata a Külső-Torda utcára. A XIX. század közepétől a Boszorkány-sor, végétől a a Csillag, a Csörgő és a Rejtek utca is a Bethlen utca része lett. A Boszorkány-sor a putriszerű, kétes hírű házakről kapta nevét.
   ro: |
-    Potrivit hărților din 1869, această stradă nu a avut încă ieșire la strada Turzii Exterioară. De la mijlocul secolului al XIX.-lea împreună strada, împreună cu alte străzi mai mici s-au asimilat în strada  Bethlen. 
-    La mijlocul secolului al XIX.-lea, s-a numit Boszorkány-sor (Rândul vrăjitoarelor). Denumirea străzii Boszorkány-sor provine de la casele dubioase de tip bordel din zonă.
+    Potrivit hărților din 1869, această stradă nu a avut încă ieșire la strada Turzii Exterioară. De la mijlocul secolului al XIX-lea strada, împreună cu alte străzi mai mici, s-au asimilat în strada Bethlen. La mijlocul secolului al XIX-lea, s-a numit Boszorkány-sor (Rândul Vrăjitoarelor), datorită caselor din zonă ce funcționau ca bordeluri.
 historical_names:
   -
     year: 1869
-    ro: Strada vrăjiroatei – Strada Bethlen
+    ro: Strada Vrăjiroatei – Strada Bethlen
     hu: Boszorkány utca - Bethlen utca
   -
     year: 1923
