--- a/metadata/27173012.yaml
+++ b/metadata/27173012.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     Nevét az Unitárius Kollégium építésekor a helyhatóság adta. Berde keresztneve nem Mózes, hanem Mózsa volt. Úgy tűnik, a névadók, a névadók ezt a Mózes becéző változatának tekintették, holott a székelyek körében a Mózsa a megszokott.
   ro: |
-    Strada și-a primit primul nume în timpul construirii Colegiului Unitarian. Numele omului politic, sponsorul acestor construcții se numea de fapt Berde Mózsa, dar acest nume a fost considerat unul de alint și schimbat. Strada poartă astăzi numele chimistului francez, laureat al Premiului Nobel pentru chimie în anul 1935.
+    Strada și-a primit primul nume în timpul construirii Colegiului Unitarian. Numele omului politic, sponsor al acestor construcții, era de fapt Berde Mózsa, dar acest nume a fost considerat unul de alint și schimbat. Strada poartă astăzi numele chimistului francez, laureat al Premiului Nobel pentru chimie în anul 1935.
 historical_names:
   -
     year: 1900
