--- a/metadata/7851893.yaml
+++ b/metadata/7851893.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     Nevét az 1848-ig közigazgatásilag a városhoz tartozó Felekre vezető útként kapta. A Felek név germán eredetű, amely a középfelnémet nyelvjárás szerint " egy darab földet" jelent, vagy a holland vlek-kel hozható kapcsolatba, amely "mezővárost, foltot" jelent.
   ro: |
-    A fost drumul care ducea spre satul Feleac, aflat sub administrația locală a Clujului.  Cuvântul Feleac poate proveni din germanică fiind un regionalism care înseamnă ”o bucată de pământ” sau din olandeza ”vlek”, însemnând ”oraș de câmpie, pată”.
+    A fost drumul care ducea spre satul Feleac, aflat sub administrația locală a Clujului. Cuvântul Feleac poate proveni din regionalismul german [[?]] ”o bucată de pământ” sau din olandeza ”vlek”, însemnând ”oraș de câmpie, pată”.
 historical_names:
   -
     year: 1571
