--- a/metadata/7932712.yaml
+++ b/metadata/7932712.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     A városfalon belüli Torda utca falakon kívüli folytatásának tekintett utca. A Belső-Torda utcának a 19. Század közepéig  Torda utca volt a neve, és a Nagypiacról nagyjából a Tordakapuig húzódott. Később Egyetem utcának nevezték. A Külső-Torda utca a XIX. század második felében az itt húzódó várfal lebontása után és a városárok feltöltése után kezdett kialakulni. A feltöltés mértékét mutatja a farkas-utcai házaknak a mai utca szintjénél jóval mélyebben fekvő udvar-, illetve kertszintje.
   ro: |
-    Strada Avram Iancu este defapt extensia din exteriorul zidului cetății a vechii străzi numită Strada Turzii, care initial a fost și strada Sibiului. Strada a fost compusă din două părți. Strada Turzii Interioară, care se situa între Piața Centrală și Turnul de POartă din Strada Turzii, care mai târziu a devenit strada Universității. A doua stradă s-a numit Strada Turzii Exterioară și a început să se dezvolte după demolarea vechiului zid al cetății și al șanțului de fortificație situate aici. Urmele schimbărilor se văd și astăzi: nivelul curților și grădinilor din strada Kogălniceanu sunt mult mai joase decât nivelul caselor construite cu front continuu.
+    Strada Avram Iancu este de fapt extensia din exteriorul zidului cetății a vechii străzi numită Strada Turzii, care inițial a fost și strada Sibiului. Strada a fost compusă din două părți. Prima se numea Strada Turzii Interioară și se situa între Piața Centrală și Turnul de Poartă din Strada Turzii, care mai târziu a devenit strada Universității. A doua se numea Strada Turzii Exterioară și a început să se dezvolte după demolarea vechiului zid al cetății și al șanțului de apărare situate aici. Urmele schimbărilor se văd și astăzi: curțile și grădinile de pe strada Kogălniceanu sunt mult mai joase decât casele construite cu front continuu.
 historical_names:
   -
     year: 1453
@@ -28,7 +28,7 @@ historical_names:
     ro: Strada Universității
     hu: Egyetem utca
   -
-    year: \?
+    year:
     ro: Strada Petőfi
   -
     year: 1923
@@ -36,7 +36,7 @@ historical_names:
     hu: Egyetem utca
   -
     year: 1945
-    ro:
+    ro: Str. Universității – Egyetem utca
     hu: Str. Universității – Egyetem utca
   -
     year: 1957
@@ -47,9 +47,9 @@ historical_names:
     ro: Str. Puskin, Str. Universității
     hu: 
   -
-    year: \?
+    year:
     ro: Strada Petőfi
     hu: Petőfi utca
   -
-    year: \?
+    year:
     ro: Strada Avram Iancu
