--- a/metadata/7933104.yaml
+++ b/metadata/7933104.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     Feltételezés szerint neve akkor keletkezett, amikor a városnak ezen a részén még nem létezett a városfal és a Házsongárd aljáig bemerészkedtek télen a farkasok. Más vélemény szerint, a közeli erdőből idáig hallattszott  a farkasüvöltés. Herepei János szerint, a középkori letelepedés alkalmával kapta, ahol a Kende törzs Farkas nevet viselő nemzetsége telepedett le először.
   ro: |
-    După unele presupuneri, numele străzii a fost creat la vremea în care în această porțiune a orașului încă nu exista zid și în perioada iernii lupii îndrazneau să pătrundă până în partea de jos a cimitirului Házsongárd. Surse scrise relatează, că urlatul lupilor din pădurea din apropriere se auzea până aici. Conform lui János Herepei, strada și-a primit numele după neamul Farkas, care a fost primul neam din cadrul tribului Kende care s-a așezat aici în perioada medievală. 
+    Se presupune că numele străzii provine din vremea în care în această porțiune a orașului încă nu exista zid, astfel încât în perioada iernii lupii îndrăzneau să pătrundă până în partea de jos a cimitirului Házsongárd. Surse scrise relatează că urlatul lupilor din pădurea din apropriere se auzea până aici. Conform lui János Herepei, strada și-a primit numele după neamul Farkas, care a fost primul neam din cadrul tribului Kende care s-a așezat aici în perioada medievală. 
 historical_names:
   -
     year: 1453
@@ -17,7 +17,7 @@ historical_names:
     hu: Külső-Farkas utca - Farkas utca
   -
     year: 1603
-    ro:
+    ro: Wolffengass
     hu: Wolffengass
   -
     year: 1923
