--- a/metadata/7934003.yaml
+++ b/metadata/7934003.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     A Belső-Monostor (Únió, Memorandumului) utca végén a városfalon kívül, baloldalt nyíló, a Belső-Szén (Jókai, Napoca) utca végéig vezető utca. Akár a London (Arany Jáos, Petru Maior) utca, ez is csupán a városfal hadászati jelentőségének megszűnése után épülhetett ki.
   ro: |
-    Este strada situată în afara zidului cetății, care pornea de la capătul străzii Memorandumului până la strada Napoca. Ca și în cazul străzii Pentru Maior, dezvoltarea acestei a fost posibilă doar după ce zidul cetății și-a pierdut funcționalitatea de zid protector al orașului.
+    Este strada situată în afara zidului cetății care pornea de la capătul străzii Memorandumului până la strada Napoca. Ca și în cazul străzii Pentru Maior, dezvoltarea acestei a fost posibilă doar după ce zidul cetății și-a pierdut funcțiunea de apărare a orașului.
 historical_names:
   -
     year: 1852-1857 
