--- a/metadata/7976486.yaml
+++ b/metadata/7976486.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     A Hídkapun kívül, attól jobbra, A Kisszamos (Malomárok) bal partján, az északi városfal előterében kialakult barompiac. A XIX. század első felében a középkapu előtti rendezetlen terület, majd tér. 1865-ben az addig meglehetősen elhanyagolt barompiacot kövezték, díszítették, magnagyobbították. A XIX. század közepén Széchenyi István mellszobrával díszített faragott kőkút állt. A városi vízvezeték létesítése után ez elvesztette jelentőségét, de az 1940-es évekig még eredeti helyén állt.
   ro: |
-    Piața Mihai Viteazu a fost inițial târg de animale în vecinătatea nordică a zudului cetății, între dreapta Turnului de Apă și stânga Vanalului Morii. În prima parte a secolului a XIX.-lea a fost un teritoriu pustiu, devenin în 1865 piață, când spațiul pentru târgul de animale a fost mărit, pavat, amenajat. La mijlocul secolului al XIX.-lea în mijlocul pieței se afla o fântână sculptată de lemn decorată cu un bust Széchenyi, care a fost funcțională până în anii 1940, reabilitarea și conectarea zonei la rețeaua de apă.
+    Piața Mihai Viteazu a fost inițial târg de animale în vecinătatea nordică a zidului cetății, între dreapta Turnului de Apă și stânga Canalului Morii. În prima parte a secolului al XIX-lea a fost teritoriu pustiu, devenind în 1865 piață, când spațiul pentru târgul de animale a fost mărit, pavat și amenajat. La mijlocul secolului al XIX-lea în mijlocul pieței se afla o fântână sculptată din lemn, decorată cu un bust Széchenyi, care a fost funcțională până în anii 1940, reabilitarea și conectarea zonei la rețeaua de apă.
 historical_names:
   -
     year: 1718
