--- a/metadata/7976593.yaml
+++ b/metadata/7976593.yaml
@@ -5,7 +5,7 @@ description:
   hu: |
     Nevét a mai főposta mellett, a Kisszamos (Malomárok) bal partján, a XVIII. század első harmadában épült Nagymalomról kapta a nevét, amelyet az 1920-as években lebontottak. Ezt a malmot tartották a város nagy malmának. Gátja az 1960-as évekig fennállt, amleyet a part rendezésekor tűntettek el.
   ro: |
-    Și-a primit numele după moara care a fost construită la începutul secolului al XVIII-lea și demolată în anul 1920. Moara s-a situat lângă poșta centrală de astăzi (Calea regele Ferdinand), pe partea stângă a Canalului Morii. Aceasta a fost cea mai mare moară a orașului. Barajul morii a existat până în anii 1960, a ot demolat cu ocazia reabilitărilor pe malul Canalului.
+    Și-a primit numele după moara care a fost construită la începutul secolului al XVIII-lea și demolată în anul 1920. Moara s-a situat lângă poșta centrală de astăzi (Calea Regele Ferdinand), pe partea stângă a Canalului Morii. Aceasta a fost cea mai mare moară a orașului. Barajul morii a existat până în anii 1960 și a fost demolat cu ocazia reabilitărilor pe malul Canalului.
 historical_names:
   - 
     year: 1852
